modules/helm_chart/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: cicd
  annotations:
    # nginx.ingress.kubernetes.io/app-root: /jenkins
    # nginx.org/rewrites: "serviceName=jenkins-svc rewrite=/$1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
        - path: /jenkins(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: jenkins
              port: 
                number: 8080
  - host: ""
    http:
      paths:
        - path: /prometheus(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: prometheus-server
              port: 
                number: 8080
  - host: ""
    http:
      paths:
        - path: /argocd(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port: 
                number: 8080
